[package]
name = "create_combined_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1.26.0", features = ["full"] }
meilisearch-sdk = "0.23.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"